src/posting/posting.scss
$empty-hatch: right $surface-lighten-1 70%;

* {
  scrollbar-color: $surface-lighten-1 50%;
  scrollbar-color-hover: $primary 80%;
  scrollbar-color-active: $primary;
  scrollbar-background: $surface-darken-1;
  scrollbar-background-hover: $surface-darken-1;
  scrollbar-background-active: $surface-darken-1;
  scrollbar-size-vertical: 1;

  &:focus {
    scrollbar-color: $surface-lighten-1 80%;
  }
}

Posting {
  &.-compact {
    & AppHeader {
      padding: 0 1;
    }
    & AppBody {
      padding: 0;
    }
    & UrlBar {
      padding: 0;
    }

    & Footer {
      padding-left: 0;
    }
    & .section {
      border: none;
    }
    & Tabs {
      height: 1;
      & Underline {
        display: none;
        height: 0;
      }
    }

    & TabbedContent:focus-within Tabs {
      &:focus {
        & .-active {
          text-style: $block-cursor-text-style;
          color: $block-cursor-foreground;
          background: $block-cursor-background;
        }
      }
      &:blur Tab:enabled {
        &.-active {
          background: $panel  ;
        }
      }
    }


    & CollectionBrowser {
      background: $surface 50%;
      &:focus {
        outline: vkey $accent;
      }
      & RequestPreview {
        border-top: none;
        background: $surface 100%;
        padding: 0 1;
      }
    }

    & RequestEditor {
      background: $surface 25%;
    }
    
    & ResponseArea {
      background: $surface 10%;
    }

    & .textual-jump-label {
      padding: 0;
      margin-top: 1;
    }

    & CommandPalette {
      align-horizontal: left;

      & > Vertical {
        /* The margin will be set in code, to align 
        the command palette with the url bar 
        */
        margin-left: 11;
        margin-top: 1;
        max-width: 1fr;
        width: auto;
      }
    
      & #--input {
        border: none;
        border-left: wide $accent;
    
        & CommandInput {
          height: 1;
          border: none;
          padding: 0;
          width: 1fr;
        }
      }
    
      & CommandList {
        width: auto;
        border: none;
        max-height: 67vh;
        border-left: wide $accent;
        padding: 0;
        & > .option-list--option {
          padding: 0;
        }
      }

    }

    &.-header-hidden {
      & CommandPalette > Vertical{
        margin-top: 0;
        margin-left: 11;
      }
    }

    & #theme-search-command-palette {
      background: black 15%;
      & > Vertical {
        height: auto;
        & CommandList {
          width: 28;
          height: auto;
          max-height: 10;
        }
      }
    }

    & #request-search-palette {
      & > Vertical {
        width: 1fr;
        overflow: hidden;
        & CommandList {
          width: 1fr;
        }
      }
    }
  }

}

ResponseArea {
  border-subtitle-color: $text-muted;
  & ResponseTextArea.empty {
      display: none;
  }
  &.success .border-title-status {
      color: $text-success;
      background: $success-muted;
  }
  &.warning .border-title-status {
      color: $text-warning;
      background: $warning-muted;
  }
  &.error .border-title-status {
      color: $text-error;
      background: $error-muted;
  }
}

AutoComplete {
  border-left: wide $accent;
  background: $surface;
  
  & AutoCompleteList {
    color: $text-muted;
    background: transparent;
  }

  & .autocomplete--highlight-match {
    color: $text-accent;
    background: $accent-muted;
  }
}

Screen {
  background: $background;
}

ModalScreen {
  background: black 30%;
}

Footer {
  padding-left: 2;
}

HelpPanel {
  #title {
    display: block;
  }
  KeyPanel {
    scrollbar-size-vertical: 1;
  }
}
.modal-body {
  background: $background;
  padding: 1 2;
  width: 50%;
  height: auto;
  max-height: 70%;
  border: wide $background-lighten-2;
  border-title-color: $text;
  border-title-background: $background;
  border-title-style: bold;
}

.section {
  border: round $accent 40%;
  border-title-color: $text-accent 50%;
  border-title-align: right;

  &:focus-within {
    border: round $accent 100%;
    border-title-color: $foreground;
    border-title-style: b;
  }

}

.hidden {
  display: none;
}

.w-auto {
  width: auto;
}

.dock-right {
  dock: right;
}

.dock-left {
  dock: left;
}

AppHeader {
  color: $text-primary;
  padding: 1 3;
  height: auto;
  & > #app-user-host {
      dock: right;
      color: $text-muted;
  }
}

AppBody {
  padding: 0 2;

  &.layout-horizontal {
    layout: horizontal;

    & KeyValueInput {
      layout: vertical;
      & Button {
        width: 100%;
      }
    }
  }
  
  &.layout-vertical {
    layout: vertical;
    
    & KeyValueInput {
      layout: horizontal;
    }
  }
}

DataTable {
  height: auto;
  width: 1fr;
  padding: 0 1;
  &:focus {
      width: 1fr;
      padding: 0;
      border-left: inner $accent;
  }
}

PostingDataTable {
    & > .datatable--header {
      color: $text-success;
      background: $surface;
    }
    & > .datatable--header-cursor {
      color: $text;
      background: $block-cursor-background;
    }
    &:blur {
      & > .datatable--cursor {
        background: transparent;
      }
      & > .datatable--header-cursor {
        color: $text-success;
        background: $surface;
      }
      
    }
}

#response-headers-pane {
  height: 1fr;
  & ResponseHeadersTable {
    max-height: 1fr;
  }
}

#response-cookies-pane {
  height: 1fr;
  & CookiesSection {
    max-height: 1fr;
    PostingDataTable {
      display: block;
    }
    #empty-message {
      hatch: $empty-hatch;
      color: $text-muted;
      display: none;
    }
    &.empty {
      PostingDataTable {
        display: none;
      }
      #empty-message {
        display: block;
      }
    }

  }
}

Input {
  border: none;
  width: 1fr;
  &:focus {
      border: none;
      padding: 0 1;
  }
  &.error {
      border-left: thick $error;
  }
}
/* ... */

